--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -3,6 +3,10 @@
 # See: https://snapcraft.io/microk8s for available channels
 microk8s_version: "1.18/stable"
 
+# Should we alias `microk8s kubectl` to `kubectl`?  Disable this
+# If you already have a `kubectl` command installed.
+microk8s_alias_kubectl: yes
+
 # Which Microk8s plugins should we install?
 # Note that any installed plugins not on this list will be removed.
 # See: https://microk8s.io/docs/addons#heading--list
