--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -2,13 +2,15 @@
 - import_tasks: _microk8s.yml
 - import_tasks: _plugins.yml
 
-# Remote access
+# Remote access to kubectl
+# (this is questionably written, given that DNS.6 is hard coded)
 - name: Ensure the host domain is configured in microk8s
   ansible.builtin.lineinfile:
     path: /var/snap/microk8s/current/certs/csr.conf.template
     regexp: "^DNS.6 = .*"
     line: "DNS.6 = {{ ansible_fqdn }}"
     insertafter: '^\[ alt_names \]'
+  ignore_errors: "{{ ansible_check_mode }}"
 
 ## Certificates
 # - name: Ensure microk8s certificate folder exists
