--- a/tasks/_plugins.yml
+++ b/tasks/_plugins.yml
@@ -1,32 +1,38 @@
 ---
 - name: Define the current status of the microk8s plugins
-  command: |
-    microk8s status --format yaml
+  ansible.builtin.command: |
+    microk8s.status --wait-ready --timeout 600 --format yaml
   register: _microk8s_current_plugins
   changed_when: false
-  check_mode: no
+  check_mode: false
   ignore_errors: "{{ ansible_check_mode }}"
 
 - name: Define lists of the names of enabled and disabled microk8s plugins
-  set_fact:
+  ansible.builtin.set_fact:
     _microk8s_enabled_plugins: "{{ _microk8s_current_plugins.stdout | from_yaml | json_query('addons[?status==`enabled`].name') }}"
     _microk8s_disabled_plugins: "{{ _microk8s_current_plugins.stdout | from_yaml | json_query('addons[?status==`disabled`].name') }}"
   ignore_errors: "{{ ansible_check_mode }}"
 
 - name: Define lists of the names of microk8s plugins to be enabled and disabled
-  set_fact:
+  ansible.builtin.set_fact:
     _microk8s_plugins_to_disable: "{{ _microk8s_enabled_plugins | difference(microk8s_plugins | json_query('[].name')) }}"
     _microk8s_plugins_to_enable: "{{ _microk8s_disabled_plugins | intersect(microk8s_plugins | json_query('[].name')) }}"
   ignore_errors: "{{ ansible_check_mode }}"
 
 - name: Ensure no microk8s plugins are enabled that shouldn't be
-  command: |
+  ansible.builtin.command: |
     microk8s.disable {{ item }} --force
   with_items: "{{ _microk8s_plugins_to_disable }}"
   when: _microk8s_plugins_to_disable
 
 - name: Ensure microk8s plugins are enabled that should be
-  command: |
-    microk8s.enable {{ microk8s_plugins | json_query('[?name==`'+item+'`].name | [0]') }}:{{ microk8s_plugins | json_query('[?name==`'+item+'`].args | [0]') }}
+  ansible.builtin.command: |
+    microk8s.enable {{ microk8s_plugins | json_query('[?name==`' + item + '`].name | [0]') }}:{{ microk8s_plugins | json_query('[?name==`' + item + '`].args | [0]') }}
   with_items: "{{ _microk8s_plugins_to_enable }}"
   when: _microk8s_plugins_to_enable
+
+- name: Wait for microk8s to be ready again
+  ansible.builtin.command: |
+    microk8s.status --wait-ready --timeout 600
+  changed_when: false
+  ignore_errors: "{{ ansible_check_mode }}"
