--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -4,7 +4,8 @@
 # microk8s_version: "latest/stable"  # For whatever reason, using this is broken in the snap plugin (2022.04.28)
 
 # Should we alias `microk8s kubectl` to `kubectl`?  Disable this
-# If you already have a `kubectl` command installed.
+# If you already have a `kubectl` command installed, or just want to
+# use microk8s.kubectl for everything.
 microk8s_alias_kubectl: true
 
 # Which Microk8s plugins should we install?
@@ -14,17 +15,6 @@ microk8s_alias_kubectl: true
 # `args` string attribute for install-time arguments to pass the `microk8s.enable` command
 microk8s_plugins:
   - name: dns
-  - name: storage
-  - name: dashboard
-  - name: metrics-server
-  - name: ha-cluster
-  # - name: metallb
-  #   args: "10.64.140.43-10.64.140.49"
-  # - name: helm3
-  - name: traefik
-  - name: registry
-  # - name: rbac
-
 
 # microk8s_plugin_dashboard_enable: true
 # microk8s_plugin_dashboard_version: v2.0.1
